freeze on exit when art finder still working
VLC sometimes freezes on exit and by debug messages it seems that happens when playlist is being deactivated while art finder is still working.
VLC sometimes freezes on exit and by debug messages it seems that happens when playlist is being deactivated while art finder is still working.
We need to wait for the art finder thread to terminate.
I am afraid the only way to terminate it asynchronously would require supporting cancellation from with the LUA interpreter. Best of luck with that...
added Difficulty::hard label
assigned to @Courmisch
commit 32e68688 Author: Rémi Denis-Courmont remi@remlab.net Date: Sun Feb 14 15:43:49 2010 +0200
Fix missing signal while stopping preparser (fixes [#3291](https://code.videolan.org/videolan/vlc/-/issues/3291))
Original author: remi@remlab.net
added Status::fixed label
closed
VideoLAN code repository instance