Fix missing signal while stopping preparser (fixes #3291)